@@ -66,7 +66,7 @@ public class NodeCollection extends Node {
 
             if (tokens[1].equals("DELETE")) return;
 
-            vertx.executeBlocking(promise -> {
+            vertx.executeBlocking(() -> {
                 try {
                     int idx = collPath.lastIndexOf("/");
                     String collName = collPath.substring(0, idx);
@@ -75,17 +75,15 @@ public class NodeCollection extends Node {
                         add(parent.getCollection(collName));
                     }
                     else {
-                        Integer version = new Integer(collPath.substring(idx+1));
+                        Integer version = Integer.valueOf(collPath.substring(idx+1));
                         add(parent.getCollection(collName, version));
                     }
                 }
                 catch (ObjectNotFoundException e) {
                     log.error("localConsumer.handler()", e);
                 }
-                promise.complete();
-            }, res -> {
-                log.warn("", res.cause());
-            });
+                return null;
+            }).onFailure(cause -> log.warn("", cause));
         });
     }
 
