@@ -42,12 +42,9 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.UUID;
 import java.util.regex.Pattern;
-import javax.ws.rs.core.MediaType;
-import javax.ws.rs.core.NewCookie;
-import javax.ws.rs.core.Response;
+import javax.ws.rs.core.*;
 import javax.ws.rs.core.Response.Status;
-import javax.ws.rs.core.UriBuilder;
-import javax.ws.rs.core.UriInfo;
+
 import org.apache.commons.lang3.StringUtils;
 import org.cristalise.kernel.collection.Aggregation;
 import org.cristalise.kernel.collection.AggregationMember;
@@ -55,12 +52,8 @@ import org.cristalise.kernel.collection.Collection;
 import org.cristalise.kernel.collection.CollectionDescription;
 import org.cristalise.kernel.collection.CollectionMember;
 import org.cristalise.kernel.collection.Dependency;
-import org.cristalise.kernel.common.AccessRightsException;
 import org.cristalise.kernel.common.CriseVertxException;
-import org.cristalise.kernel.common.InvalidCollectionModification;
 import org.cristalise.kernel.common.InvalidDataException;
-import org.cristalise.kernel.common.InvalidTransitionException;
-import org.cristalise.kernel.common.ObjectAlreadyExistsException;
 import org.cristalise.kernel.common.ObjectNotFoundException;
 import org.cristalise.kernel.common.PersistencyException;
 import org.cristalise.kernel.entity.Job;
@@ -92,6 +85,7 @@ import org.json.JSONObject;
 import org.json.XML;
 import com.google.common.io.ByteStreams;
 import lombok.extern.slf4j.Slf4j;
+
 
 
 @Slf4j
@@ -168,6 +162,10 @@ public abstract class ItemUtils extends RestHandler {
         catch(ClassCastException e) {
             throw new WebAppExceptionBuilder().exception(e).newCookie(cookie).build();
         }
+    }
+
+    protected AgentProxy getAgentProxy(Cookie cookie) throws ObjectNotFoundException {
+        return Gateway.getAgentProxy(getAgentPath(cookie));
     }
 
     protected AgentProxy getAgentProxy(NewCookie cookie) {
@@ -307,7 +305,7 @@ public abstract class ItemUtils extends RestHandler {
         eventData.put("agent", ev.getAgentPath().getAgentName());
         eventData.put("role", ev.getAgentRole());
 
-        if (ev.getSchemaName() != null && ev.getSchemaName().length()>0) { // add outcome info
+        if (ev.getSchemaName() != null && !ev.getSchemaName().isEmpty()) { // add outcome info
             LinkedHashMap<String, Object> outcomeData = new LinkedHashMap<String, Object>();
             outcomeData.put("name",          ev.getViewName());
             outcomeData.put("schema",        ev.getSchemaName());
@@ -449,7 +447,7 @@ public abstract class ItemUtils extends RestHandler {
     protected String getItemName(ItemPath ip) {
         PagedResult result = Gateway.getLookup().searchAliases(ip, 0, 50);
 
-        if (result.rows.size() > 0) return ((DomainPath)result.rows.get(0)).getName();
+        if (!result.rows.isEmpty()) return ((DomainPath)result.rows.getFirst()).getName();
         else                        return "";
     }
 
@@ -467,8 +465,7 @@ public abstract class ItemUtils extends RestHandler {
         collData.put("isDescription", coll instanceof CollectionDescription);
 
         // include class props for dependencies here, not in member
-        if (coll instanceof Dependency) {
-            Dependency dep = (Dependency)coll;
+        if (coll instanceof Dependency dep) {
             addCollectionProps(collData, dep.getProperties(), dep.getClassProps(), true);
         }
 
@@ -524,8 +521,8 @@ public abstract class ItemUtils extends RestHandler {
             else                                                                 propData.add(propMap);
         }
 
-        if (classPropData.size() > 0 && includeClassProps) collData.put("classIdentifiers", classPropData);
-        if (propData.size() > 0)                           collData.put("properties", propData);
+        if (!classPropData.isEmpty() && includeClassProps) collData.put("classIdentifiers", classPropData);
+        if (!propData.isEmpty())                           collData.put("properties", propData);
     }
 
     /**
@@ -547,8 +544,6 @@ public abstract class ItemUtils extends RestHandler {
 
     /**
      * 
-     * @param props
-     * @return
      */
     public static List<String> getItemNames(Property ...props) {
         PagedResult result = Gateway.getLookup().search(new DomainPath(""), Arrays.asList(props), 0, 1000);
@@ -564,20 +559,6 @@ public abstract class ItemUtils extends RestHandler {
 
     /**
      * 
-     * @param item
-     * @param postData
-     * @param types
-     * @param actPath
-     * @param agent
-     * @return
-     * @throws ObjectNotFoundException
-     * @throws InvalidDataException
-     * @throws OutcomeBuilderException
-     * @throws AccessRightsException
-     * @throws InvalidTransitionException
-     * @throws PersistencyException
-     * @throws ObjectAlreadyExistsException
-     * @throws InvalidCollectionModification
      */
     protected String executePredefinedStep(ItemProxy item, String postData, String contentType, String actPath, AgentProxy agent)
             throws IOException, CriseVertxException, OutcomeBuilderException
@@ -631,9 +612,7 @@ public abstract class ItemUtils extends RestHandler {
     }
 
     /**
-     * @throws CriseVertxException 
-     * @throws OutcomeBuilderException 
-     * 
+     *
      */
     protected String executeJob(ItemProxy item, String outcome, String outcomeType, InputStream attachment, String fileName, 
             String actPath, String transition, AgentProxy agent)
